k8s-deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: gantry
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: harbor.gantry.ai/gantry/dashboard:prod-v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: harbor-cred
