k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 9000
      targetPort: 80
